@@ -1,3 +1,8 @@
+2014-08-04  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
+	* tools/device-help.pl:
+	  Corrected the rfPIC12F509.. to rfPIC12C509 and
+	  renamed the data sheet search buttons.
+
 2014-08-03  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
 	* tools/device-help.pl:
 	  Can to search the data sheet of the processors.
